# Medical-assistant-with-RAG

./: .dockerignore  Dockerfile  README.md  example.env  pyproject.toml  render.yaml  requirements.txt
data/cache/: chunks.pkl  embeddings.npy  manifest.json
data/vector_store/54e0d9e9-de31-4d74-ae94-2601d7072707/: index_metadata.pickle
data/vector_store/6abe3b7b-35f2-4707-bd33-cac989d7e98e/: index_metadata.pickle
data/vector_store/d3c7968c-1c37-4297-903b-b330e5a510b3/: index_metadata.pickle
labs/: project-lab.ipynb  requirements.txt
rag/api/: main.py
rag/api/models/: io.py
rag/api/routers/: delete.py  health.py  index.py  query.py  stats.py  upload.py
rag/api/schemas/: models.py
rag/api/services/: components.py  indexing.py  retrieval.py
rag/app/: main.py
rag/app/routers/: health.py
rag/core/: config.py  errors.py  logging.py  middleware.py  security.py
rag/pipeline/: chunker.py  data_loader.py  embedder.py  grok_rag_pipeline.py  hf_rag_pipeline.py  retriever.py  vector_store.py
rag/pipeline/LLM/: grok_llm.py  hf_endpoit.py
rag/test/: rag_pipeline_dev.py
rag/utility/: helpers.py
